--- a/Source/Windows/DanceStudio/DanceStudio/App.xaml
+++ b/Source/Windows/DanceStudio/DanceStudio/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="DanceStudio.App"
+﻿<Application x:Uid="Application_1" x:Class="DanceStudio.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
