--- a/Source/Windows/DanceStudio/DanceStudio/MainWindow.xaml
+++ b/Source/Windows/DanceStudio/DanceStudio/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:c="clr-namespace:DanceStudio.Commands"
+        xmlns:cli="clr-namespace:DanceStudio.Core.Cli;assembly=DanceStudio.Core.Cli"
         xml:lang="en-US"
         Title="Dance Studio" Height="350" Width="525">
     <Window.InputBindings>
@@ -63,7 +64,9 @@
                         
                     </Grid>
                     <Grid x:Uid="Grid_3">
-                        
+                        <WindowsFormsHost x:Uid="WindowsFormsHost_1">
+                            <cli:StepChartEditor x:Uid="cli:StepChartEditor_1" />
+                        </WindowsFormsHost>
                     </Grid>
                 </DockPanel>
             </Grid>
