--- a/Source/Windows/DanceStudio/DanceStudio/MainWindow.xaml
+++ b/Source/Windows/DanceStudio/DanceStudio/MainWindow.xaml
@@ -4,7 +4,9 @@
         xmlns:c="clr-namespace:DanceStudio.Commands"
         xmlns:cli="clr-namespace:DanceStudio.Core.Cli;assembly=DanceStudio.Core.Cli"
         xml:lang="en-US"
-        Title="Dance Studio" Height="350" Width="525">
+        Title="Dance Studio" Height="350" Width="525"
+        x:Name="DanceStudioWindow"
+        Closed="DanceStudioWindow_Closed">
     <Window.InputBindings>
     </Window.InputBindings>
     <Window.CommandBindings>
