--- a/Source/Windows/DanceStudio/DanceStudio/MainWindow.xaml
+++ b/Source/Windows/DanceStudio/DanceStudio/MainWindow.xaml
@@ -12,7 +12,7 @@
     </Window.InputBindings>
     <Window.CommandBindings>
         <CommandBinding x:Uid="CommandBinding_1" Command="Close" CanExecute="CloseCommandBinding_CanExecute" Executed="CloseCommandBinding_Executed" />
-        <CommandBinding x:Uid="CommandBinding_2" Command="{x:Static c:CustomCommands.ViewOnlineDocumentation}" CanExecute="ViewOnlineDocumentationCommandBinding_CanExecute" Executed="ViewOnlineDocumentationCommandBinding_Executed" />
+        <CommandBinding x:Uid="CommandBinding_2" Command="{x:Static c:CustomCommands.ViewDocumentation}" CanExecute="ViewDocumentationCommandBinding_CanExecute" Executed="ViewDocumentationCommandBinding_Executed" />
     </Window.CommandBindings>
     <Grid x:Uid="Grid_1">
         <DockPanel x:Uid="DockPanel_1">
@@ -44,7 +44,7 @@
                     <MenuItem x:Uid="MenuItem_22" Header="_Stepchart Editor" Localization.Comments="The menu item that will show or hide the main stepchart editor (where arrows are placed)." />
                 </MenuItem>
                 <MenuItem x:Uid="MenuItem_5" Header="_Help" Localization.Comments="The menu item that displays options to help the user get information about the tool.">
-                    <MenuItem x:Uid="MenuItem_6" Header="View Online _Documentation" Command="{x:Static c:CustomCommands.ViewOnlineDocumentation}" Localization.Comments="Menu item that opens the documentation for the tool from the web." />
+                    <MenuItem x:Uid="MenuItem_6" Header="View _Documentation" Command="{x:Static c:CustomCommands.ViewDocumentation}" Localization.Comments="Menu item that opens the documentation for the tool." />
                     <MenuItem x:Uid="MenuItem_7" Header="_Tutorial Videos" Localization.Comments="Menu item that displays a list of tutorial videos from YouTube for helping use the tool.">
                     </MenuItem>
                     <Separator x:Uid="Separator_6" />
